Finished First assignment on Codeacademy Projects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title> First Webpage on Codeacademy </title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-Hello, My name is Ivan
-  </body>
+    <h1> All the things I want to learn at codeacademy </1>
+      <ul>
+        <li> HTML/CSS and javascript the entire paths </li>
+        <li> Full Stack Javascript</li>
+        <li> Front end Design</li>
+      </ul>
+
+</body>
 </html>
