--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-    <h1> All the things I want to learn at codeacademy </h1>
+    <h1> Hello, Code School! </h1>
       <ul>
         <li> HTML/CSS and javascript the entire paths </li>
         <li> Full Stack Javascript</li>
